# UBL

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  SECURITY.md
.github/workflows/: ci.yml
docs/: PUBLISHING.md  STDLIB_PROGRAMS.md  TRUST_INTEGRATION.md  UBL-Trust-Architecture.docx  UBL-Trust-Architecture.md  UBL-Trust-Architecture_FULL.md
examples/trust/: barrier_invoice_request.json
examples/trust/chips/: trusted_transfer_chip.json
examples/trust/programs/: execute_trusted_transfer_program.json
scripts/: register_pack.py
src/: api.rs  engine.rs  error.rs  interp.rs  ledger.rs  lib.rs  main.rs  trust_barrier.rs  types.rs
stdlib/program_packs/: agreements.json  entities.json  financial.json  payments.json  programs_part1.json  programs_part2.json  reputation.json  trust.json  trust_programs.json  workspaces.json
tests/: smoke.rs
