[package]
name = "ubl_core"
version = "2.1.0"
edition = "2021"
description = "UBL 2.0 Kernel (Spec-Grade) with Trust Architecture: isolation barrier, signed atomic ops, registry introspection, proof verification."
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_jcs = "0.1"

thiserror = "1.0"
anyhow = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
uuid = { version = "1.6", features = ["v4"] }

# Proof + operation signatures (optional)
ed25519-dalek = "2.1"
base64 = "0.22"
